# zero2prod

./: .env  Cargo.toml  configuration.yml
.devcontainer/: devcontainer.json
configuration/: base.yml  produciton.yml
migrations/: 20230603095440_create_subscriptions_table.sql
src/: configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs  subscriptions.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
tests/common/: mod.rs
