[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.3.1"
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1", features = ["derive"] }
config = "0.13.3"
uuid = { version = "1.3.3", features = ["v4"] }
chrono = "0.4.26"
env_logger = "0.10.0"
log = "0.4.18"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = [
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.7.5"
serde-aux = "4.2.0"
unicode-segmentation = "1.10.1"
validator = "0.16.0"
assertables = "7.0.1"
rand = "0.8.5"
reqwest = { version = "0.11.18", default-features = false, features = [
    "json",
    "rustls-tls",
] }

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
]

[dev-dependencies]
once_cell = "1.17.2"
fake = "2.6.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
wiremock = "0.5"
